syntax = "proto3";

option csharp_namespace = "Quiz.API";
import "google/protobuf/empty.proto";
package quiz;

// The quizer service definition.
service Quizer {
  rpc CreateGame (QuizCreateRequest) returns (QuizCreatedResponse);
  rpc QuizExist(QuizExistRequest) returns (QuizExistResponse);
  rpc StartGame(QuizStartRequest) returns (google.protobuf.Empty);
  rpc JoinGame(JoinGameRequest) returns (google.protobuf.Empty);
  rpc NextQuestion(NextQuestionRequest) returns (google.protobuf.Empty);
}

message NextQuestionRequest {
	uint64 id = 1;
}

message JoinGameRequest {
	uint64 id = 1;
	string user = 2;
}

message QuizStartRequest {
	uint64 id = 1;
}

message QuizExistResponse {
	QuizData quiz = 1;
}	

message QuizExistRequest {
	uint64 id = 1;
}

// The request message containing the quiz specification
message QuizCreateRequest {
  string title = 1;
  QuizData quiz = 2;
}

// The response message containing id of the game
message QuizCreatedResponse {
  uint64 id = 1;
  QuizData quiz = 2;
}

message QuizData {
	string title = 1;
	string description = 2;
	string imageUrl = 3;
	repeated QuestionData questions = 4;
}

message QuestionData {
	int32 timeout = 1;
	string title = 2;
}